# dinorisc

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
lib/: BinaryTranslator.cpp  BinaryTranslator.h  CAPI.cpp  CAPI.h  CMakeLists.txt  ELFReader.cpp  ELFReader.h  Error.h  ExecutionEngine.cpp  ExecutionEngine.h  GuestState.h  Lifter.cpp  Lifter.h  RV64IDecoder.cpp  RV64IDecoder.h  RV64IInstruction.cpp  RV64IInstruction.h
lib/ARM64/: Encoder.cpp  Encoder.h  Instruction.cpp  Instruction.h
lib/IR/: IR.cpp  IR.h
lib/Lowering/: InstructionSelector.cpp  InstructionSelector.h  LivenessAnalysis.cpp  LivenessAnalysis.h  RegisterAllocator.cpp  RegisterAllocator.h
lib/RISCV/: Decoder.cpp  Decoder.h  Instruction.cpp  Instruction.h
python/: README.md  requirements-dev.txt  setup.py
python/dinorisc/: __init__.py  bindings.py
python/tests/: test_api.py
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_e2e.py
tests/e2e/samples/: add.c  branch.c  fibonacci.c  function.c  loop.c  memory.c  stack_test.c
tests/unit/: CMakeLists.txt  DecoderTest.cpp  EncoderTest.cpp  ExecutionEngineTest.cpp  LifterTest.cpp  LoweringPipelineTest.cpp  RV64IDecoderTest.cpp
tools/: CMakeLists.txt
tools/dinorisc/: CMakeLists.txt  DinoRISCMain.cpp
